[package]
name = "node-rodio"
version = "0.1.0"
description = "node rodio"
authors = ["dianjie"]
license = "MIT"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.13.0"
reqwest = { version = "0.11", features = ["blocking"] }

[dependencies.neon]
version = "0.10"
default-features = false
features = ["napi-6", "channel-api"]
